--- a/static-layout-not-view-ready/player-statistics.html
+++ b/static-layout-not-view-ready/player-statistics.html
@@ -28,221 +28,123 @@
         </div>
       </nav>
       <div class="mainTable">
-        <h1 class="leagueStandingsTitle"><span>LEAGUE STANDINGS</span></h1>
+        <h1 class="leagueStandingsTitle"><span>PLAYER STATISTICS</span></h1>
 
         <table class="contentTable">
           <thead>
             <tr>
-              <th>Rank</th>
               <th>Name</th>
-              <th>Logo</th>
-              <th>Games Played</th>
-              <th>Wins</th>
-              <th>Draws</th>
-              <th>Loses</th>
-              <th>Points</th>
-              <th>Goals For</th>
-              <th>Goals Against</th>
-              <th>Goal Differential</th>
-              <th>Form</th>
+              <th>Photo</th>
+              <th>Team</th>
+              <th>Goals</th>
+              <th>Assists</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>1</td>
-              <td>USA</td>
+              <td>John Wayne</td>
               <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
             </tr>
             <tr>
-              <td>1</td>
-              <td>USA</td>
+              <td>John Wayne</td>
               <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
             </tr>
             <tr>
-              <td>1</td>
-              <td>USA</td>
+              <td>John Wayne</td>
               <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
             </tr>
             <tr>
-              <td>1</td>
-              <td>USA</td>
+              <td>John Wayne</td>
               <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
             </tr>
             <tr>
-              <td>1</td>
-              <td>USA</td>
+              <td>John Wayne</td>
               <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
             </tr>
             <tr>
-              <td>1</td>
-              <td>USA</td>
+              <td>John Wayne</td>
               <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
             </tr>
             <tr>
-              <td>1</td>
-              <td>USA</td>
+              <td>John Wayne</td>
               <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
             </tr>
             <tr>
-              <td>1</td>
-              <td>USA</td>
+              <td>John Wayne</td>
               <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
             </tr>
             <tr>
-              <td>1</td>
-              <td>USA</td>
+              <td>John Wayne</td>
               <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
             </tr>
             <tr>
-              <td>1</td>
-              <td>USA</td>
+              <td>John Wayne</td>
               <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
             </tr>
             <tr>
-              <td>1</td>
-              <td>USA</td>
+              <td>John Wayne</td>
               <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
             </tr>
             <tr>
-              <td>1</td>
-              <td>USA</td>
+              <td>John Wayne</td>
               <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
             </tr>
             <tr>
-              <td>1</td>
-              <td>USA</td>
+              <td>John Wayne</td>
               <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
             </tr>
             <tr>
-              <td>1</td>
-              <td>USA</td>
+              <td>John Wayne</td>
               <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
+            </tr>
+            <tr>
+              <td>John Wayne</td>
+              <td>img</td>
+              <td>USA</td>
+              <td>99</td>
+              <td>50</td>
             </tr>
           </tbody>
         </table>
