--- a/static-layout-not-view-ready/league-standings.html
+++ b/static-layout-not-view-ready/league-standings.html
@@ -12,6 +12,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    />
     <title>Score City</title>
   </head>
   <body>
@@ -27,225 +31,22 @@
           <a href=""><i class="fa fa-youtube fa-2x icon"></i></a>
         </div>
       </nav>
-      <div class="mainTable">
-        <h1 class="leagueStandingsTitle"><span>LEAGUE STANDINGS</span></h1>
 
-        <table class="contentTable">
-          <thead>
-            <tr>
-              <th>Rank</th>
-              <th>Name</th>
-              <th>Logo</th>
-              <th>Games Played</th>
-              <th>Wins</th>
-              <th>Draws</th>
-              <th>Loses</th>
-              <th>Points</th>
-              <th>Goals For</th>
-              <th>Goals Against</th>
-              <th>Goal Differential</th>
-              <th>Form</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>USA</td>
-              <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>USA</td>
-              <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>USA</td>
-              <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>USA</td>
-              <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>USA</td>
-              <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>USA</td>
-              <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>USA</td>
-              <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>USA</td>
-              <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>USA</td>
-              <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>USA</td>
-              <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>USA</td>
-              <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>USA</td>
-              <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>USA</td>
-              <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>USA</td>
-              <td>img</td>
-              <td>10</td>
-              <td>7</td>
-              <td>3</td>
-              <td>0</td>
-              <td>20</td>
-              <td>18</td>
-              <td>5</td>
-              <td>7</td>
-              <td>Yes</td>
-            </tr>
-          </tbody>
-        </table>
+      <div class="scoreboardMain">
+        <div class="row">
+          <div class="col-sm-offset-2 col-sm-8">
+            <div class="box">
+              <div class="teamBox team1 text-center">
+                <div class="teamLogo">
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/en/thumb/5/56/Real_Madrid_CF.svg/1200px-Real_Madrid_CF.svg.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
